--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
+/*Start of global styles*/
+body {
+    margin: 0;
+    padding: 0;
+}
+/*End of global styles*/
+
 /*Start of header styles*/
-body.header {
+.header {
     background-color: black;
     margin: 0;
     padding: 0;
-    height: 180px;
+    min-height: 180px;
     width: 100%;
     text-align: center;
 }
@@ -25,6 +32,13 @@ body.header {
     padding: 5px 10px;
 }
 
+.header-navBar ul li a {
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    padding: 10px 10px 15px 10px;
+}
+
 .header-navBtn-center {
     display: inline-block;
     margin-top: 5.6px;
@@ -39,20 +53,14 @@ body.header {
     float: right;
 }
 
-.header-navBar ul li a {
-    text-decoration: none;
-    color: white;
-    text-align: center;
-    padding: 10px 10px 15px 10px;
-}
 /*End of header styles*/
 
 /*Start of footer styles*/
-body.footer {
+.footer {
     color: rgb(212, 212, 212);
     width: 100%;
-    background-color: rgb(56, 56, 56);
-    float: left; 
+    background: linear-gradient(90deg, rgba(85,83,96,1) 0%, rgba(69,67,77,1) 20%, rgba(47,46,52,1) 40%, rgba(47,46,52,1) 60%, rgba(69,67,77,1) 80%, rgba(85,83,96,1) 100%);
+    min-height: 560px;
 }
 
 .footer a {
@@ -66,8 +74,7 @@ body.footer {
 
 .footer-contact {
     display: inline-block;
-    margin-right: 10%;
-    margin-left: 10px;
+    margin: 5px 10% 0 10px;
 }
 
 .footer-address, .footer-ssn {
@@ -84,4 +91,17 @@ body.footer {
     display: inline-block;
     vertical-align: top;
 }
-/*End of header styles*/
+
+.footer-support a:hover {
+    color: rgb(255, 255, 255);
+}
+
+.footer-divider {
+    text-align: center;
+    width: 35%;
+}
+
+.footer-copy p {
+    text-align: center;
+}
+/*End of footer styles*/
