--- a/ticket.css
+++ b/ticket.css
@@ -2,20 +2,20 @@
 * {box-sizing: border-box}
 
 /* Container needed to position the overlay. Adjust the width as needed */
-.container {
+.ticket-container {
   position: relative;
   width: 100%;
 }
 
 /* Make the image to responsive */
-.image {
+.ticket-container-image {
   display: block;
   width: 100%;
   height: auto;
 }
 
 /* The overlay effect - lays on top of the container and over the image */
-.overlay {
+.ticket-overlay {
   position: absolute;
   bottom: 0;
   background: rgb(0, 0, 0);
@@ -31,7 +31,15 @@
   height:auto;
 }
 
+.overlay h3 {
+  text-align: center;
+}
+
+.overlay2 p {
+  text-align: left;
+}
+
 /* When you mouse over the container, fade in the overlay title */
-.container:hover .overlay {
+.ticket-container:hover .overlay {
   opacity: 5;
 }
