--- a/css/m1.css
+++ b/css/m1.css
@@ -82,6 +82,7 @@ h1{
     width: 80%;
     height: 80%;
     justify-content: center;
+    overflow: hidden;
     margin: auto;
     background-color:whitesmoke;
     border-radius: 50px 50px 0 0;
@@ -93,7 +94,6 @@ h1{
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 60px;
     letter-spacing: 2px;
     padding: 20px;
     background-color: #000066;
@@ -124,12 +124,13 @@ h1{
     margin-bottom: 20px;
     font-weight: bold;
 }
+
 .prod-select button{
     padding: 10px;
     background-color: white;
     font-size: 12pt;
     font-weight: bold;
-    width: 50px;
+    width: 60px;
     margin: 3px;
     transition: all 0.3s ease;
 }
@@ -137,13 +138,10 @@ h1{
     background-color: black;
     color: white;
     border: 2px solid black;
+    cursor: pointer;
     transform: scale(1.1);
 }
-.size-btn button:active, .size-btn button:focus{
-    background-color: black;
-    color: white;
-    border: 2px solid black;
-}
+
 .prod-qty input{
     border: 2px solid black;
     border-radius: 20px;
@@ -154,6 +152,7 @@ h1{
 }
 
 .prod-btn button{
+    
     border: 2px solid black;
     background-color: white;
     font-family: cambria;
@@ -161,14 +160,20 @@ h1{
     font-size: 15px;
     padding: 10px;
     width: 130px;
-    height: 40px;
+    height: 50px;
     margin-right: 10px;
     margin-top: 20px;
     transition: all .3s ease;
+}
+#prodbtn2{
+    position: relative;
+    top: -73px;
+    left: 150px;
 }
 .prod-btn button:hover{
     transform: scale(1.1);
     background-color: black;
     color: white;
+    cursor: pointer;
 }
 
