--- a/css/m2.css
+++ b/css/m2.css
@@ -30,7 +30,7 @@ h1{
     height: 500px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
+    margin-top: -50px;
     overflow: hidden;
     text-align: center;
 }
@@ -61,6 +61,7 @@ h1{
     padding: 5px;
     border-radius: 5px;
     margin-left: 15px;
+    margin-bottom: 20px;
     color: white;
     font-size: 25px;
     letter-spacing: 0.1em;
@@ -79,6 +80,7 @@ h1{
     left: -500px;
 }
 .product{
+    overflow: hidden;
     width: 80%;
     height: 80%;
     justify-content: center;
@@ -93,7 +95,6 @@ h1{
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 60px;
     letter-spacing: 2px;
     padding: 20px;
     background-color: #000066;
@@ -143,14 +144,20 @@ h1{
     font-size: 15px;
     padding: 10px;
     width: 130px;
-    height: 40px;
+    height: 50px;
     margin-right: 10px;
     margin-top: 20px;
     transition: all .3s ease;
+}
+#prodbtn2{
+    position: relative;
+    top: -73px;
+    left: 150px;
 }
 .prod-btn button:hover{
     transform: scale(1.1);
     background-color: black;
     color: white;
+    cursor: pointer;
 }
 
