--- a/css/m4.css
+++ b/css/m4.css
@@ -79,6 +79,7 @@ h1{
     left: -500px;
 }
 .product{
+    overflow: hidden;
     width: 80%;
     height: 80%;
     justify-content: center;
@@ -93,7 +94,6 @@ h1{
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 60px;
     letter-spacing: 2px;
     padding: 20px;
     background-color: #000066;
@@ -143,7 +143,7 @@ h1{
     font-size: 15px;
     padding: 10px;
     width: 130px;
-    height: 40px;
+    height: 50px;
     margin-right: 10px;
     margin-top: 20px;
     transition: all .3s ease;
@@ -152,4 +152,5 @@ h1{
     transform: scale(1.1);
     background-color: black;
     color: white;
+    cursor: pointer;
 }
