--- a/css/m7.css
+++ b/css/m7.css
@@ -79,6 +79,7 @@ h1{
     left: -500px;
 }
 .product{
+    overflow: hidden;
     width: 80%;
     height: 80%;
     justify-content: center;
@@ -93,7 +94,6 @@ h1{
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 60px;
     letter-spacing: 2px;
     padding: 20px;
     background-color: #000066;
@@ -129,7 +129,7 @@ h1{
     background-color: white;
     font-size: 12pt;
     font-weight: bold;
-    width: 50px;
+    width: 60px;
     margin: 3px;
     transition: all 0.3s ease;
 }
@@ -137,13 +137,10 @@ h1{
     background-color: black;
     color: white;
     border: 2px solid black;
+    cursor: pointer;
     transform: scale(1.1);
 }
-.size-btn button:active{
-    background-color: black;
-    color: white;
-    border: 2px solid black;
-}
+
 .prod-qty input{
     border: 2px solid black;
     border-radius: 20px;
@@ -161,13 +158,19 @@ h1{
     font-size: 15px;
     padding: 10px;
     width: 130px;
-    height: 40px;
+    height: 50px;
     margin-right: 10px;
     margin-top: 20px;
     transition: all .3s ease;
+}
+#prodbtn2{
+    position: relative;
+    top: -73px;
+    left: 150px;
 }
 .prod-btn button:hover{
     transform: scale(1.1);
     background-color: black;
     color: white;
+    cursor: pointer;
 }
