--- a/css/mHistory.css
+++ b/css/mHistory.css
@@ -7,14 +7,6 @@
     margin:0;
     font-family: cambria; 
 }
-.logo{
-    margin: auto;
-    margin-top: -50px;
-    width: 200px;
-    height: 50px;
-    z-index: 1;
-}
-
 h1{
     color: white;
     text-align: center;
@@ -47,7 +39,9 @@ h1{
     font-weight: bold;
 }
 #controlbtn2{
-    margin-left: 960px;
+    position: relative;
+    top: 0;
+    left: 920px;
 }
 .history-btn button:hover, .ddlhistory:hover, .controlbtn button:hover{
     transform: scale(1.1); 
@@ -60,5 +54,6 @@ h1{
     letter-spacing: .2em;
     font-size: 16px;
     margin-top: 100px;
+    margin-bottom: 100px;
     text-align: center;
 }
