--- a/css/merch.css
+++ b/css/merch.css
@@ -49,6 +49,7 @@ h3{
     border-radius: 30px;
     cursor: pointer;
     background-color: whitesmoke; 
+    color: black;
     padding: 10px 10px 30px 10px;
     transition: .4s;
     
