--- a/css/event_ticket.css
+++ b/css/event_ticket.css
@@ -125,5 +125,19 @@ tr,td,th{
     text-align: left;
 }
 .form td{
-    height:50px;
+    height:40px;
 }
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    background-color: #333;
+    padding: 0.5em;
+  }
+  nav li {
+    margin: 0 1em;
+  }
+  nav a {
+    color: #fff;
+    text-decoration: none;
+  }
