--- a/css/style.css
+++ b/css/style.css
@@ -145,4 +145,17 @@ body {
     border: 3px solid black;
 }
 
+.helpUser-form-error {
+    color: white;
+    background-color: rgb(241, 75, 83);
+    margin: 0 25% 10px 25%;
+    padding: 5px 0;
+}
+
+.helpUser-form-success {
+    color: white;
+    background-color: green;
+    margin: 0 25% 10px 25%;
+    padding: 5px 0;
+}
 /*End of helpdeskUser.php styles*/
