--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,17 @@ body {
     border: 3px solid black;
 }
 
+.helpUser-form-btn input {
+    width: 20%;
+    height: 30px;
+    border: none;
+    border-radius: 4px;
+    background-color: #4f6874;
+    color: white;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
 .helpUser-form-error {
     color: white;
     background-color: rgb(241, 75, 83);
