--- a/css/cart.css
+++ b/css/cart.css
@@ -193,6 +193,16 @@ h1{
     font-size: 18px;
     letter-spacing: .1em;
 }
+.expdate{
+    text-align: center;
+    border-radius: 10px;
+    margin-bottom: 25px;
+    border: 1px solid black;
+    width: 150px;
+    height: 50px;
+    font-size: 18px;
+    letter-spacing: .1em;
+}
 .payment-img{
     width: 500px;
     float: left;
