--- a/css/cart.css
+++ b/css/cart.css
@@ -1,13 +1,3 @@
- html {
-    background-color: black;
-    margin-top: 15px;
-    overflow-x: hidden;
-}
-*{
-    margin:0;
-    font-family: cambria; 
-    box-sizing: border-box;
-}
 h1{
     color: white;
     text-align: center;
@@ -230,15 +220,16 @@ h1{
     float: none;
     background-color: white;
     color: black;
-    width: 170px;
+    width: 190px;
     height: 50px;
     margin-top: 90px;
-    margin-left:290px; 
+    margin-left:290px;
     padding: 10px;
     border: 2px solid white;
     font-size: 15px;
     font-weight: bold;
     letter-spacing: 0.1em;
+    clear: both;
     transition: all .3s ease;
 }
 .pay-btn button:hover{
