--- a/css/merch.css
+++ b/css/merch.css
@@ -1,20 +1,11 @@
- html {
-    background-color: black;
-    margin-top: 15px;
-    overflow-x: hidden;
-}
-*{
-    margin:0;
-    font-family: cambria; 
-}
 
 .mbanner img{
    margin-top: 120px;
    height: 300px;
    width: 1200px;
    z-index: 0;
-} 
-h1{
+}  
+#merch{
     color: white;
     text-align: center;
     font-family: cambria;
@@ -58,7 +49,7 @@ h3{
     transform: translate(0px, -20px);
 }
 
-img{
+.content img{
     width: 200px;
     height: 200px;
     text-align: center;
