--- a/css/event.css
+++ b/css/event.css
@@ -1,11 +1,5 @@
-*{
-    padding: 0;
-    margin: 0;
-    font-family: cambria;
-}
-
 body{
-    background-color: black;
+    overflow-x: hidden;
 }
 .ebanner{
     overflow: hidden;
@@ -148,24 +142,24 @@ h1{
 }
 
 .events{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: 138%;
-    transform: translate(-50%,-50%)
+    position: relative;
+    left: 70%;
+    margin-top: 90%;
+    transform: translate(-50%,-50%);
+    margin-bottom: -90%;
 }
 
 .event-card{
     width: 800px;
-    height: 800px;
-    margin-bottom: -60px;
+    height: 600px;
+    margin-bottom: 230px;
     border: 1px solid black;
 }
 
 .event-front, .event-back{
     backface-visibility: hidden;
     width: 800px;
-    height: 700px;
+    margin-bottom: 30px;
     position: absolute;
     overflow: hidden;
     transition: transform .6s linear;
@@ -183,7 +177,8 @@ h1{
     font-size: 30px;
 }
 .event-back{
-    background-color: black;
+    background-color: rgba(0, 0, 0, .25);
+    height: 820px;
     transform: perspective(600px) rotateY(180deg);
 }
 .event-back h2{
@@ -241,11 +236,12 @@ h1{
     margin-left: 45%;
     margin-top:20px;
     transition: all 0.3s ease;
+    
 }
 .event-btn button:hover{
     background-color: black;
     color: white;
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 .event-card:hover > .event-front{
     transform: perspective(600px) rotateY(-180deg);
