--- a/css/cart.css
+++ b/css/cart.css
@@ -135,6 +135,7 @@ h1{
     border: 2px solid black;
     color:white;
     font-size: 16px;
+    font-family: cambria;
     letter-spacing: .1em;
     padding: 10px;
     margin-top: 15px;
@@ -181,6 +182,7 @@ h1{
     width: 300px;
     height: 50px;
     font-size: 18px;
+    font-family: cambria;
     letter-spacing: .1em;
 }
 .expdate{
@@ -191,6 +193,7 @@ h1{
     width: 150px;
     height: 50px;
     font-size: 18px;
+    font-family: cambria;
     letter-spacing: .1em;
 }
 .payment-img{
