--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 /*End of global styles*/
 
-/*Start of header styles*/
+/*Start of headerUser styles*/
 .header {
     background-color: black;
     margin: 0;
@@ -30,11 +30,11 @@ body {
     padding: 0;
 }
 
-.header-navBar ul li {
+.header-navBar li {
     padding: 5px 10px;
 }
 
-.header-navBar ul li a {
+.header-navBar a {
     text-decoration: none;
     color: white;
     text-align: center;
@@ -54,7 +54,89 @@ body {
 .header-navBtn-right {
     float: right;
 }
-/*End of header styles*/
+
+/*End of headerUser styles*/
+
+/*Start of headerAdmin styles*/
+.headerA {
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    min-height: 180px;
+    width: 100%;
+    text-align: center;
+}
+
+.headerA-navBar {
+    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(58,58,65,0.7456232492997199) 25%, rgba(58,58,65,1) 50%, rgba(58,58,65,0.7540266106442577) 75%, rgba(0,0,0,0) 100%);
+    padding: 0;
+    margin: 0;
+}
+
+.headerA-navBar ul {
+    list-style: none;
+}
+
+.headerA-navBar > ul {
+    height: 44px;
+    margin: 0 10% 0 10%;
+    padding: 0;
+}
+
+.headerA-dropBtn, .headerA-btn {
+    padding: 5px 10px;
+}
+
+.headerA-navBar a {
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    padding: 0 10px 15px 10px;
+    display: block;
+}
+
+.headerA-navBtn:hover {
+    background-color: #7f7f86;
+}
+
+.headerA-dropdown, .headerA-navBtn {
+    position: relative;
+    display: inline-block;
+}
+
+.headerA-dropctn {
+    display: none;
+    position: absolute;
+    background-color: #b9b9b9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.headerA-dropctn ul {
+    margin: 0;
+    padding: 0;
+}
+
+.headerA-dropctn a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+}
+
+.headerA-dropctn a:hover {
+    background-color: #ddd;
+}
+
+.headerA-dropdown:hover .headerA-dropctn {
+    display: block;
+}
+
+.headerA-dropdown:hover .headerA-dropBtn {
+    background-color: #7f7f86;
+}
+
+/*End of headerAdmin styles*/
 
 /*Start of footer styles*/
 .footer {
