--- a/css/cart.css
+++ b/css/cart.css
@@ -160,6 +160,7 @@ h1{
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 120px;
     width: 1000px;
     height: 650px;
     background-color: white;
@@ -220,7 +221,6 @@ h1{
     top: -500px;
 }
 .pay-btn button{
-    float: none;
     background-color: white;
     color: black;
     width: 190px;
@@ -239,6 +239,6 @@ h1{
     transform: scale(1.1);
     background-color: black;
     color:white;
-     border: 2px solid white;
-     cursor: pointer;
+    border: 2px solid white;
+    cursor: pointer;
 }
