--- a/css/merch.css
+++ b/css/merch.css
@@ -130,6 +130,7 @@ h5{
     justify-content: center;
     width: 160px;
     font-size: 16px;
+    font-family: cambria;
     letter-spacing: 0.1em;
     font-weight: bold;
     float: right;
