--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     background-color: black;
     color: white;
 }
+
 /*End of global styles*/
 
 /*Start of headerUser styles*/
@@ -20,7 +21,7 @@ body {
 }
 
 .header-navBar {
-    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(58,58,65,0.7456232492997199) 25%, rgba(58,58,65,1) 50%, rgba(58,58,65,0.7540266106442577) 75%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(58, 58, 65, 0.7456232492997199) 25%, rgba(58, 58, 65, 1) 50%, rgba(58, 58, 65, 0.7540266106442577) 75%, rgba(0, 0, 0, 0) 100%);
     padding: 0;
     margin: 0;
 }
@@ -28,15 +29,17 @@ body {
 .header-navBar ul {
     list-style: none;
 }
-.header-navBar > ul{
+
+.header-navBar>ul {
     height: 50px;
     margin: 0 10px 0 2%;
     padding: 0;
 }
 
-.header-dropBtn, .header-btn {
+.header-dropBtn,
+.header-btn {
     padding: 0px 10px;
-} 
+}
 
 .header-navBar a {
     text-decoration: none;
@@ -50,7 +53,8 @@ body {
     background-color: #7f7f86;
 }
 
-.header-dropdown, .header-navBtn {
+.header-dropdown,
+.header-navBtn {
     position: relative;
     display: inline-block;
 }
@@ -60,7 +64,7 @@ body {
     position: absolute;
     background-color: #b9b9b9;
     min-width: 170px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -87,35 +91,42 @@ body {
     background-color: #7f7f86;
 }
 
-.header-navBtn-right{
+.header-navBtn-right {
     list-style-type: none;
     width: 55px;
     margin-top: -55px;
     float: right;
     transition: all 1s ease;
 }
-.header-navBtn-right:hover{
+
+.header-navBtn-right:hover {
     animation: shake 0.5s;
     animation-iteration-count: infinite;
 }
-@keyframes shake{
+
+@keyframes shake {
     0% {
         transform: translate(1px, 1px) rotate(0deg);
     }
+
     20% {
-        transform: translate(-3px,0px) rotate(-1deg);
+        transform: translate(-3px, 0px) rotate(-1deg);
     }
+
     40% {
-        transform: translate(1px,-1px) rotate(0deg);
+        transform: translate(1px, -1px) rotate(0deg);
     }
+
     60% {
-        transform: translate(-1px,0px) rotate(1deg);
+        transform: translate(-1px, 0px) rotate(1deg);
     }
+
     80% {
-        transform: translate(1px,1px) rotate(0deg);
+        transform: translate(1px, 1px) rotate(0deg);
     }
+
     100% {
-        transform: translate(3px,0px) rotate(-1deg);
+        transform: translate(3px, 0px) rotate(-1deg);
     }
 
 }
@@ -134,7 +145,7 @@ body {
 }
 
 .headerA-navBar {
-    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(58,58,65,0.7456232492997199) 25%, rgba(58,58,65,1) 50%, rgba(58,58,65,0.7540266106442577) 75%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(58, 58, 65, 0.7456232492997199) 25%, rgba(58, 58, 65, 1) 50%, rgba(58, 58, 65, 0.7540266106442577) 75%, rgba(0, 0, 0, 0) 100%);
     padding: 0;
     margin: 0;
 }
@@ -143,13 +154,14 @@ body {
     list-style: none;
 }
 
-.headerA-navBar > ul {
+.headerA-navBar>ul {
     height: 50px;
     margin: 0 10% 0 10%;
     padding: 0;
 }
 
-.headerA-dropBtn, .headerA-btn {
+.headerA-dropBtn,
+.headerA-btn {
     padding: 0px 10px;
 }
 
@@ -165,7 +177,8 @@ body {
     background-color: #7f7f86;
 }
 
-.headerA-dropdown, .headerA-navBtn {
+.headerA-dropdown,
+.headerA-navBtn {
     position: relative;
     display: inline-block;
 }
@@ -175,7 +188,7 @@ body {
     position: absolute;
     background-color: #b9b9b9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -217,7 +230,8 @@ body {
     text-decoration: none;
 }
 
-.footer h2, .footer p {
+.footer h2,
+.footer p {
     text-align: left;
 }
 
@@ -226,7 +240,8 @@ body {
     margin: 5px 10% 0 10px;
 }
 
-.footer-address, .footer-ssn {
+.footer-address,
+.footer-ssn {
     display: inline-block;
     margin-right: 10%;
     vertical-align: top;
@@ -257,6 +272,7 @@ body {
 .footer-copy p {
     text-align: center;
 }
+
 /*End of footer styles*/
 
 /*Start of helpdeskUser.php styles*/
@@ -272,7 +288,8 @@ body {
     border-radius: 10px;
 }
 
-.helpUser-form-group input, .helpUser-form-group textarea {
+.helpUser-form-group input,
+.helpUser-form-group textarea {
     width: 50%;
     box-sizing: border-box;
     border: 2px solid #ccc;
@@ -289,7 +306,8 @@ body {
     resize: none;
 }
 
-.helpUser-form-group input:focus, .helpUser-form-group textarea:focus {
+.helpUser-form-group input:focus,
+.helpUser-form-group textarea:focus {
     border: 3px solid black;
 }
 
@@ -317,6 +335,7 @@ body {
     margin: 0 25% 10px 25%;
     padding: 5px 0;
 }
+
 /*End of helpdeskUser.php styles*/
 
 /*Start of addEvent.php styles*/
@@ -335,10 +354,13 @@ body {
 .addEvent-form label {
     color: black;
 }
-.addEvent-form-group input{
+
+.addEvent-form-group input {
     margin-top: 10px;
 }
-.addEvent-form-group input, .addEvent-form-group textarea {
+
+.addEvent-form-group input,
+.addEvent-form-group textarea {
     width: 50%;
     box-sizing: border-box;
     border: 2px solid #ccc;
@@ -356,7 +378,8 @@ body {
     resize: none;
 }
 
-.addEvent-form-group input:focus, .addEvent-form-group textarea:focus {
+.addEvent-form-group input:focus,
+.addEvent-form-group textarea:focus {
     border: 3px solid black;
 }
 
@@ -373,7 +396,8 @@ body {
     margin: 10px;
     transition: all 0.2s ease;
 }
-.addEvent-form-btn input:hover{
+
+.addEvent-form-btn input:hover {
     cursor: pointer;
     color: white;
     background-color: black;
@@ -396,20 +420,22 @@ body {
     padding: 5px 0;
     border-radius: 5px;
 }
+
 /*End of addEvent.php styles*/
 
-/*Start of editEvent.php styles*/
+/*Start of eventEdit.php styles*/
 .editEvents-header {
     text-align: center;
 }
+
 .editEvents-searchBar {
     text-align: center;
     width: 20%;
     margin: 10px 40% 10px 40%;
-    
+
 }
 
-.editEvents-searchBar-label{
+.editEvents-searchBar-label {
     width: 250px;
 }
 
@@ -418,7 +444,7 @@ body {
     padding: 10px 10px;
 }
 
-.editEvents-searchBar-input input{
+.editEvents-searchBar-input input {
     width: 250px;
     padding: 10px 5px;
     border-radius: 30px;
@@ -429,11 +455,12 @@ body {
     font-family: Cambria;
     background-color: black;
 }
-.editEvents-searchBar-input input:focus{
+
+.editEvents-searchBar-input input:focus {
     color: white;
 }
 
-.editEvents-searchBtn{
+.editEvents-searchBtn {
     padding: 10px 5px;
     font-size: 16px;
     letter-spacing: .1em;
@@ -445,7 +472,8 @@ body {
     color: white;
     transition: all .3s ease;
 }
-.editEvents-searchBtn:hover{
+
+.editEvents-searchBtn:hover {
     transform: scale(1.1);
     cursor: pointer;
     background-color: white;
@@ -453,125 +481,96 @@ body {
     border: 1px solid black;
 }
 
-/*End of editEvent.php styles*/
-
-/*Start of merchAdmin.php styles*/
-.merchAdmin-header {
-    text-align: center;
-}
-.merchfunc-admin button{
-    font-size: 12pt;
-    text-align: center;
-    letter-spacing: 0.1em;
-    font-family: cambria;
-    border-radius: 20px;
-    border: 2px white solid;
-    width: 140px;
-    height: 40px;
-    margin: 10px 10px 0 330%;
-    cursor: pointer;
-    transition: .4s;
-}
-.merchfunc-admin button:hover{
-    transform: scale3d(1.1,1.1,1.1); 
-    background-color: black;
-    color: white;
-    border: 1px white solid;
-}
-/*End of merchAdmin.php styles*/
-/*Start of merchAdd.php styles*/
-.addMerch-form{
-    text-align: center;
-    background-color: rgba(255, 255, 255, 0.89);
-    color: black;
-    margin: 20px 20% 10px 20%;
-    padding: 20px;
-    border-radius: 20px;
-}
-.addMerch-form-group-rd input{
-    margin: 20px 0;
-    width: 50px;
-}
-.addMerch-form-group-file input{
-    margin:10px 38%;
-    text-align: center;
-    padding: 5px;
-}
-
-.addMerch-form-group input{
-    text-align: center;
-    width: 250px;
-    padding: 10px 5px;
-    margin: 10px 10px;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    border: 1px solid white;
-    letter-spacing: .1em;
-    font-size: 16px;
-    font-family: Cambria;
-}
-.addMerch-form-btn input{
-    font-family: cambria;
-    letter-spacing: .1em;
-    width: 20%;
-    height: 50px;
-    border: none;
-    border-radius: 5px;
-    background-color: #4f6874;
-    color: white;
-    font-size: 16px;
-    margin: 10px;
-    transition: all 0.2s ease;
-}
-.addMerch-form-btn input:hover{
-    cursor: pointer;
-    color: white;
-    background-color: black;
-    transform: scale(1.1);
-}
-.addMerch-form-error{
-    text-align: left;
-    color: white;
-    background-color: rgb(241, 75, 83);
-    margin: 10px 25% 10px 25%;
-    padding: 5px 15px;
-    border-radius: 5px;
-}
-.addMerch-form-success{
-    color: white;
-    background-color: green;
-    margin: 10px 25% 10px 25%;
-    padding: 5px 0;
-    border-radius: 5px;
-}
-/*End of merchAdd.php styles*/
-/*Start of merchView.php styles*/
-.order-info{
-    width: 70%;
-    margin: 30px 20px;
-    margin-left: 15%;
-    text-align: center;
+.event-details {
+    width: 80%;
+    margin-left: 10%;
+    margin-top: -5%;
     border-collapse: collapse;
 }
-.order-details{
-    border: 2px solid white;
-    margin-bottom: 20px;
-    border-collapse: separate;
+.event-details th{
+    padding-top: 100px;
+    padding-bottom: 20px;
 }
-.order-info th,td{
+.event-details td{
     padding: 20px;
+    color: black;
+    border: 2px solid black;
+    background-color: #ffffff;
 }
-.order-info td input {
-    width: 30%;
-    background-color: red;
+.event-details button a{
+    font-size: 15px;
+    letter-spacing: 0.1em;
+    font-weight: bold;
+    text-decoration: none;
+    font-family: cambria;
+    color: black;
 }
-.order-info input ~ .chkbox:checked{
-    background-color: green;
+.event-details button{
+    float: right;
+    width: 70px;
+    margin: 10px 0;
+    padding: 7px 2px;
+    border: 1px solid black;
+    border-radius: 10px;
+    transition: all 0.1s ease;
 }
-.viewMerch-btn{
+#edit:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    border: 1px solid black;
+    background-color: rgb(196, 247, 196);
+}
+#delete:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    border: 1px solid black;
+    background-color: rgb(245, 160, 217);
+}
+
+/*End of eventEdit.php styles*/
+
+/*Start of editEvent.php styles*/
+.edit-header {
+    text-align: center;
+}
+.edit-form-table{
+    width: 70%;
+    margin-top: 50px;
+    margin-left: 18%;
+}
+.edit-form-table th{
+    font-size: 14pt;
+    vertical-align: top;
+}
+.edit-form-table input{
+    min-width: 70%;
+    height: 45px;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+.edit-form-table input[type=date], input[type=time], input[type=hidden]{
+    font-size: 12pt;
+}
+
+.edit-form-table textarea{
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    background-color: white;
+    padding: 12px 20px 12px 10px;
+    margin-bottom: 10px;
+    height: 200px;
+    width: 70%;
+    margin-top: 10px;
+    resize: none;
+}
+.edit-form-btn{
     margin-left: 40%;
 }
-.viewMerch-btn input{
+
+.edit-form-btn input {
     font-family: cambria;
     letter-spacing: .1em;
     width: 15%;
@@ -584,11 +583,204 @@ body {
     margin: 20px;
     transition: all 0.2s ease;
 }
-.viewMerch-btn input:hover{
+
+.edit-form-btn input:hover {
     cursor: pointer;
-    transform: scale3d(1.1,1.1,1.1); 
+    transform: scale3d(1.1, 1.1, 1.1);
     background-color: black;
     color: white;
     border: 2px white solid;
 }
+/*End of editEvent.php styles*/
+/*Start of deleteEvent.php styles*/
+.dltMsg{
+    background-color: rgb(0, 0, 0);
+    border-radius: 20px;
+    border: 2px white solid;
+    font-weight: bold;
+    padding: 20px;
+    margin: 80px 30%;
+    font-size: 14pt;
+    text-align: center;
+}
+.dlt-back-btn{
+    margin-left: 40%;
+    margin-top: -5%;
+}
+.dlt-back-btn button{
+    font-family: cambria;
+    letter-spacing: .1em;
+    width: 15%;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    background-color: #4f6874;
+    color: white;
+    font-size: 16px;
+    margin: 20px;
+    transition: all 0.2s ease;
+}
+.dlt-back-btn button:hover {
+    cursor: pointer;
+    transform: scale3d(1.1, 1.1, 1.1);
+    background-color: black;
+    color: white;
+    border: 2px white solid;
+}
+/*End of deleteEvent.php styles*/
+/*Start of merchAdmin.php styles*/
+.merchAdmin-header {
+    text-align: center;
+}
+
+.merchfunc-admin button {
+    font-size: 12pt;
+    text-align: center;
+    letter-spacing: 0.1em;
+    font-family: cambria;
+    border-radius: 20px;
+    border: 2px white solid;
+    width: 140px;
+    height: 40px;
+    margin: 10px 10px 0 330%;
+    cursor: pointer;
+    transition: .4s;
+}
+
+.merchfunc-admin button:hover {
+    transform: scale3d(1.1, 1.1, 1.1);
+    background-color: black;
+    color: white;
+    border: 1px white solid;
+}
+
+/*End of merchAdmin.php styles*/
+/*Start of merchAdd.php styles*/
+.addMerch-form {
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.89);
+    color: black;
+    margin: 20px 20% 10px 20%;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.addMerch-form-group-rd input {
+    margin: 20px 0;
+    width: 50px;
+}
+
+.addMerch-form-group-file input {
+    margin: 10px 38%;
+    text-align: center;
+    padding: 5px;
+}
+
+.addMerch-form-group input {
+    text-align: center;
+    width: 250px;
+    padding: 10px 5px;
+    margin: 10px 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    border: 1px solid white;
+    letter-spacing: .1em;
+    font-size: 16px;
+    font-family: Cambria;
+}
+
+.addMerch-form-btn input {
+    font-family: cambria;
+    letter-spacing: .1em;
+    width: 20%;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    background-color: #4f6874;
+    color: white;
+    font-size: 16px;
+    margin: 10px;
+    transition: all 0.2s ease;
+}
+
+.addMerch-form-btn input:hover {
+    cursor: pointer;
+    color: white;
+    background-color: black;
+    transform: scale(1.1);
+}
+
+.addMerch-form-error {
+    text-align: left;
+    color: white;
+    background-color: rgb(241, 75, 83);
+    margin: 10px 25% 10px 25%;
+    padding: 5px 15px;
+    border-radius: 5px;
+}
+
+.addMerch-form-success {
+    color: white;
+    background-color: green;
+    margin: 10px 25% 10px 25%;
+    padding: 5px 0;
+    border-radius: 5px;
+}
+
+/*End of merchAdd.php styles*/
+/*Start of merchView.php styles*/
+.order-info {
+    width: 70%;
+    margin: 30px 20px;
+    margin-left: 15%;
+    text-align: center;
+    border-collapse: collapse;
+}
+
+.order-details {
+    border: 2px solid white;
+    margin-bottom: 20px;
+    border-collapse: separate;
+}
+
+.order-info th,
+td {
+    padding: 20px;
+}
+
+.order-info td input {
+    width: 30%;
+    background-color: red;
+}
+
+.order-info input~.chkbox:checked {
+    background-color: green;
+}
+
+.viewMerch-btn {
+    margin-left: 40%;
+}
+
+.viewMerch-btn input {
+    font-family: cambria;
+    letter-spacing: .1em;
+    width: 15%;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    background-color: #4f6874;
+    color: white;
+    font-size: 16px;
+    margin: 20px;
+    transition: all 0.2s ease;
+}
+
+.viewMerch-btn input:hover {
+    cursor: pointer;
+    transform: scale3d(1.1, 1.1, 1.1);
+    background-color: black;
+    color: white;
+    border: 2px white solid;
+}
+
 /*End of merchView.php styles*/
