--- a/css/style.css
+++ b/css/style.css
@@ -357,6 +357,7 @@ body {
 
 .addEvent-form-group input {
     margin-top: 10px;
+    font-family: cambria;
 }
 
 .addEvent-form-group input,
@@ -422,69 +423,52 @@ body {
 }
 
 /*End of addEvent.php styles*/
-
+/*Start of eventTicketManage.php styles*/
+#with-hd{
+    font-size: 18pt;
+    margin-top: 60px;
+    margin-left: 40%;
+    border: 1px solid white;
+    width: 20%;
+    height: 30px;
+    border-radius: 30px;
+    padding:10px 5px;
+}
+#without-hd{
+    font-size: 18pt;
+    margin-top: 60px;
+    margin-left: 38%;
+    border: 1px solid white;
+    height: 30px;
+    width: 25%;
+    border-radius: 30px;
+    padding:10px 5px;
+}
+#edit,#add, #delete{
+    width: 80px;
+    height: 55px;
+    margin: 5px;
+}
+#add-no-ticket{
+    width: 80px;
+    height: 55px;
+    margin-left: -90px;
+    margin-right: 15px;
+}
+hr{
+    width: 85%;
+}
+/*End of eventTicketManage.php styles*/
 /*Start of eventEdit.php styles*/
 .editEvents-header {
     text-align: center;
-}
-
-.editEvents-searchBar {
-    text-align: center;
-    width: 20%;
-    margin: 10px 40% 10px 40%;
-
-}
-
-.editEvents-searchBar-label {
-    width: 250px;
-}
-
-.editEvents-searchBar td {
-    width: 250px;
-    padding: 10px 10px;
-}
-
-.editEvents-searchBar-input input {
-    width: 250px;
-    padding: 10px 5px;
-    border-radius: 30px;
-    border: 1px solid white;
-    letter-spacing: .1em;
-    font-size: 16px;
-    text-align: center;
-    font-family: Cambria;
-    background-color: black;
-}
-
-.editEvents-searchBar-input input:focus {
-    color: white;
-}
-
-.editEvents-searchBtn {
-    padding: 10px 5px;
-    font-size: 16px;
-    letter-spacing: .1em;
-    font-family: Cambria;
-    width: 100px;
-    border: 1px solid white;
-    border-radius: 20px;
-    background-color: black;
-    color: white;
-    transition: all .3s ease;
-}
-
-.editEvents-searchBtn:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-    background-color: white;
-    color: black;
-    border: 1px solid black;
 }
 
 .event-details {
     width: 80%;
     margin-left: 10%;
     margin-top: -5%;
+    margin-bottom: 5%;
     border-collapse: collapse;
 }
 .event-details th{
@@ -515,6 +499,12 @@ body {
     transition: all 0.1s ease;
 }
 #edit:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    border: 1px solid black;
+    background-color: rgb(181, 246, 248);
+}
+#add:hover, #add-no-ticket:hover{
     cursor: pointer;
     transform: scale(1.1);
     border: 1px solid black;
@@ -632,19 +622,22 @@ body {
 .merchAdmin-header {
     text-align: center;
 }
-
+.merchfunc-admin{
+    margin-left: 30%;
+}
 .merchfunc-admin button {
     font-size: 12pt;
     text-align: center;
     letter-spacing: 0.1em;
     font-family: cambria;
-    border-radius: 20px;
+    border-radius: 25px;
     border: 2px white solid;
-    width: 140px;
-    height: 40px;
-    margin: 10px 10px 0 330%;
+    width: 170px;
+    height: 50px;
+    padding: 10px 5px;
+    margin: 10px 10px 0 0;
     cursor: pointer;
-    transition: .4s;
+    transition: .2s;
 }
 
 .merchfunc-admin button:hover {
