--- a/css/event.css
+++ b/css/event.css
@@ -235,9 +235,9 @@ h1{
     border: 2px solid white;
     cursor: pointer;
     margin:auto;
-    margin-left: 45%;
-    margin-top:20px;
-    transition: all 0.3s ease;
+    margin-left: 43%;
+    margin-bottom: 15px;
+    transition: all 0.2s ease;
 }
 .event-btn button:hover{
     background-color: black;
